--- a/index.html
+++ b/index.html
@@ -1,34 +1,103 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <title>Para ti 💖</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(120deg, #ffdde1, #ee9ca7);
-      color: #fff;
-      text-align: center;
-    }
-    h1 {
-      margin-top: 20vh;
-      font-size: 3em;
-    }
-    p {
-      font-size: 1.3em;
-      max-width: 600px;
-      margin: auto;
-    }
-  </style>
+<meta charset="UTF-8">
+<title>Para ti 💗</title>
+
+<style>
+html, body {
+  margin: 0;
+  padding: 0;
+  background: #050505;
+  overflow: hidden;
+}
+canvas {
+  display: block;
+}
+</style>
 </head>
 <body>
 
-  <h1>Para ti 💕</h1>
-  <p>
-    Esta página es solo para ti,  
-    porque hay cosas que no caben en palabras normales.
-  </p>
+<canvas id="canvas"></canvas>
+
+<script>
+const canvas = document.getElementById("canvas");
+const ctx = canvas.getContext("2d");
+
+let w, h;
+function resize() {
+  w = canvas.width = window.innerWidth;
+  h = canvas.height = window.innerHeight;
+}
+window.addEventListener("resize", resize);
+resize();
+
+// 💗 Color rosa elegante
+const COLOR = { r: 255, g: 155, b: 205 };
+
+// Función corazón (orientación correcta)
+function isInsideHeart(x, y) {
+  y = -y;
+  x /= 16;
+  y /= 16;
+  return Math.pow(x*x + y*y - 1, 3) - x*x*y*y*y <= 0;
+}
+
+// Crear partículas
+const particles = [];
+const DENSITY = 15000;
+
+for (let i = 0; i < DENSITY; i++) {
+  let x, y;
+  do {
+    x = Math.random() * 40 - 20;
+    y = Math.random() * 40 - 20;
+  } while (!isInsideHeart(x, y));
+
+  particles.push({
+    x,
+    y,
+    size: Math.random() * 0.22 + 0.08,
+    phase: Math.random() * Math.PI * 2
+  });
+}
+
+let time = 0;
+
+function animate() {
+  ctx.clearRect(0, 0, w, h);
+  time += 0.025;
+
+  const beat = 1 + Math.sin(time) * 0.06;
+
+  ctx.save();
+  ctx.translate(w / 2, h / 2);
+  ctx.scale(10 * beat, 10 * beat);
+
+  // Dibujar partículas
+  particles.forEach(p => {
+    const alpha = 0.25 + Math.sin(time + p.phase) * 0.35;
+    ctx.beginPath();
+    ctx.fillStyle = `rgba(${COLOR.r},${COLOR.g},${COLOR.b},${alpha})`;
+    ctx.arc(p.x, p.y, p.size, 0, Math.PI * 2);
+    ctx.fill();
+  });
+
+  // ✂️ RECORTAR TEXTO (VACÍO)
+  ctx.globalCompositeOperation = "destination-out";
+  ctx.fillStyle = "black";
+  ctx.font = "bold 6px 'Segoe UI', sans-serif";
+  ctx.textAlign = "center";
+  ctx.textBaseline = "middle";
+  ctx.fillText("ANAIS", 0, 2);
+  ctx.globalCompositeOperation = "source-over";
+
+  ctx.restore();
+  requestAnimationFrame(animate);
+}
+
+animate();
+</script>
 
 </body>
 </html>
